--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -65,11 +65,20 @@ body {
     }
   }
 }
-
 .panel-scroll {
   @extend .panel-body;
   height: 500px;
   overflow-y: scroll;
+}
+.modal-body {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.order-modal-body {
+  padding-top:20px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 /*
@@ -454,7 +463,7 @@ select.form-control {
   padding-bottom: 2px;
   padding-left: 15px;
   background-color: #fff;
-  border: 1px solid $primary-border-color;
+  border: 1px solid $secondary-border-color;
   font-size: 14px;
 }
 input.form-control:focus,
@@ -463,7 +472,7 @@ select.form-control:focus {
   padding-bottom: 2px;
   padding-left: 15px;
   background-color: #fff;
-  border: 1px solid $primary-border-color;
+  border: 1px solid $secondary-border-color;
   font-size: 14px;
   box-shadow: none;
 }
@@ -506,25 +515,24 @@ div.modal-text {
   float: right;
 }
 table {
-  border-collapse: collapse;
-  border-color: grey;
-  border-radius: 2px;
+  border-collapse: separate;
   border: 2px solid $secondary-border-color;
+  display: table;
+  border-collapse: separate;
+  border-spacing: 0;
+  border-radius: 4px;
 }
 table.tableWhite {
   background-color: #f3f3f3;
   th {
     background-color: #eeeeee;
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
     vertical-align: middle;
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 100px;
   }
   td {
     vertical-align: bottom;
-    padding-left: 0;
-    padding-right: 0;
   }
 }
 .table>tbody>tr>td,
@@ -535,8 +543,8 @@ table.tableWhite {
 .table>thead>tr>th {
   vertical-align: middle;
   text-align: center;
-  padding-left: 0;
-  padding-right: 0;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 @media screen and (max-width: 768px) {
   .table>tbody>tr>td,
@@ -548,15 +556,15 @@ table.tableWhite {
     vertical-align: middle;
     text-align: right;
     background-color: #fff;
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
   .table-responsive {
-    border: none;
+    border: 0;
   }
   tbody {
     background-color: $secondary-background-color;
-    border: none;
+    border: hidden;
   }
   table thead {
     display: none;
