--- a/src/views/dashboard.default.sales-management.track.html
+++ b/src/views/dashboard.default.sales-management.track.html
@@ -115,9 +115,7 @@
     <button class="btn-status-danger" type="button" ng-disabled="blocks.length==0" ng-click="deleteBlock()">Delete</button>
   </div>
   <div class="modal-body">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <!-- <div class="panel-scroll">-->
+
         <div class="tableWhite">
           <table class="table tableWhite">
             <thead>
@@ -142,9 +140,6 @@
             </tbody>
           </table>
         </div>
-      </div>
-    </div>
-    <!--</div>-->
   </div>
   <div class="modal-footer">
     <button class="btn-status-default" type="button" ng-click="cancel()">Close</button>
@@ -217,8 +212,6 @@
     <h3 class="modal-title">Inventory Batch Details</h3>
   </div>
   <div class="modal-body">
-    <div class="panel panel-default">
-      <div class="panel-body">
         <h4 class="text-center">Initial Catch Audit</h4>
         <hr class="short">
         <div class="tableWhite">
@@ -244,9 +237,10 @@
               </tr>
             </tbody>
           </table>
-        </div>
-      </div>
-      <div class="panel-body">
+          </div>
+          </div>
+
+      <div class="modal-body">
         <h4 class="text-center">Lot History</h4>
         <hr class="short">
         <div class="table-responsive">
