--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -74,14 +74,14 @@ canvas, vis-network-track {
   overflow-y: scroll;
 }
 .modal-body {
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 35px;
+  padding-right: 35px;
 }
 
-.order-modal-body {
+.modal-order-body {
   padding-top:20px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 /*
@@ -200,9 +200,7 @@ iframe:focus,
 iframe:hover {
   max-width: 100%;
 }
-th {
-  text-align: center;
-}
+
 
 /*
  * Sidebar
@@ -520,20 +518,22 @@ div.modal-text {
 }
 table {
   border-collapse: separate;
-  border: 2px solid $secondary-border-color;
+  border: 0.18em solid $secondary-border-color;
   display: table;
   border-collapse: separate;
   border-spacing: 0;
-  border-radius: 4px;
+  border-radius: 2px;
 }
 table.tableWhite {
-  background-color: $secondary-background-color;
+  background-color: #f3f3f3;
+  border-radius: 2px;
+
   th {
-    background-color: $secondary-background-color;
-    border-top-right-radius: 4px;
-    border-top-left-radius: 4px;
+    background-color: $primary-background-color;
     vertical-align: middle;
+    border-radius: 0px;
   }
+
   td {
     vertical-align: bottom;
   }
@@ -546,8 +546,13 @@ table.tableWhite {
 .table>thead>tr>th {
   vertical-align: middle;
   text-align: center;
-
 }
+
+.panel>.table-responsive:last-child>.table:last-child, .panel>.table:last-child,
+.panel>.table-responsive:first-child>.table:first-child, .panel>.table:first-child {
+  border-radius: 5px;
+}
+
 
 @media screen and (max-width: 768px) {
   // .table>tbody>tr>td,
@@ -590,14 +595,14 @@ table.tableWhite {
     vertical-align: middle;
     float: left;
   }
-  table td:first-child {
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-  }
-  table td:last-child {
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
-  }
+  // table td:first-child {
+  //   border-top-left-radius: 0px;
+  //   border-top-right-radius: 0px;
+  // }
+  // table td:last-child {
+  //   border-bottom-left-radius: 0px;
+  //   border-bottom-right-radius: 0px;
+  // }
 }
 select {
   padding: 6px 10px;
