--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -108,8 +108,7 @@
   <div class="modal-header">
     <h3 class="modal-title text-center">Add an Order</h3>
   </div>
-  <div class="col-lg-12">
-    <div class="order-modal-body">
+    <div class="modal-body">
       <form>
         <fieldset class="form-group">
           <div class="col-lg-6">
@@ -225,7 +224,6 @@
        </form>
     </div>
     </form>
-  </div>
   </div>
   <div class="modal-footer">
     <div class="alignright">
