--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -316,9 +316,9 @@
           <tbody>
             <tr ng-repeat="event in history.events track by $index">
               <td data-label="Operation">{{history.events[history.events.length-1-$index].operation}}</td>
-              <td data-label="Date">{{getDate([history.events.length-1-$index])}}</td>
-              <td data-label="Location">{{getStageName([history.events.length-1-$index])}}</td>
-              <td data-label="Quantity">{{quantities[$index] + " " + units[history.events.length-1-$index]}}</td>
+              <td data-label="Date">&nbsp;{{getDate([history.events.length-1-$index])}}</td>
+              <td data-label="Location">&nbsp;{{getStageName([history.events.length-1-$index])}}</td>
+              <td data-label="Quantity">&nbsp;{{quantities[$index] + " " + units[history.events.length-1-$index]}}</td>
             </tr>
           </tbody>
         </table>
