--- a/src/views/dashboard.default.sales-management.track.html
+++ b/src/views/dashboard.default.sales-management.track.html
@@ -57,14 +57,14 @@
   <div class="modal-body">
     <form>
       <fieldset class="form-group">
-          <label>Name</label>
-          <input class="form-control" ng-model="name" maxlength="40" placeholder="Name of sales channel...">
-          <small class="text-muted">Maximum 40 characters.</small>
-          <br>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox" ng-model="isEcommerceStage">Sell on e-commerce</label>
-          </div>
+        <label>Name</label>
+        <input class="form-control" ng-model="name" maxlength="40" placeholder="Name of sales channel...">
+        <small class="text-muted">Maximum 40 characters.</small>
+        <br>
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" ng-model="isEcommerceStage">Sell on e-commerce</label>
+        </div>
       </fieldset>
     </form>
   </div>
@@ -83,13 +83,13 @@
   <div class="modal-body">
     <form>
       <fieldset class="form-group">
-          <label>New Selling Point Name</label>
-          <input class="form-control" ng-model="sellingPoint.name" maxlength="25" placeholder="Name of sales channel...">
-          <small class="text-muted">Maximum 25 characters.</small>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox" ng-model="isEcommerceStage"> Sell on e-commerce</label>
-          </div>
+        <label>New Selling Point Name</label>
+        <input class="form-control" ng-model="sellingPoint.name" maxlength="25" placeholder="Name of sales channel...">
+        <small class="text-muted">Maximum 25 characters.</small>
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" ng-model="isEcommerceStage"> Sell on e-commerce</label>
+        </div>
       </fieldset>
     </form>
   </div>
@@ -112,30 +112,30 @@
   </div>
   <div class="modal-body">
 
-        <div class="tableWhite">
-          <table class="table tableWhite">
-            <thead>
-              <tr>
-                <th>Select</th>
-                <!--<th>#</th>-->
-                <th>Product Type</th>
-                <th>Quantity</th>
-                <th>Inventory Input Date</th>
-              </tr>
-            </thead>
-            <tbody ng-repeat="block in blocks track by $index">
-              <tr>
-                <td data-label="Select">
-                  <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
-                </td>
-                <!--<td data-label="#">{{$index + 1}}</td>-->
-                <td data-label="Product">{{block.productType.name}}</td>
-                <td data-label="Quantity">{{block.quantity + " " + block.units}}</td>
-                <td data-label="Date Added">{{block.dateCreated | date: 'short'}}</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+    <div class="tableWhite">
+      <table class="table tableWhite">
+        <thead>
+          <tr>
+            <th>Select</th>
+            <!--<th>#</th>-->
+            <th>Product Type</th>
+            <th>Quantity</th>
+            <th>Inventory Input Date</th>
+          </tr>
+        </thead>
+        <tbody ng-repeat="block in blocks track by $index">
+          <tr>
+            <td data-label="Select">
+              <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
+            </td>
+            <!--<td data-label="#">{{$index + 1}}</td>-->
+            <td data-label="Product">{{block.productType.name}}</td>
+            <td data-label="Quantity">{{block.quantity + " " + block.units}}</td>
+            <td data-label="Date Added">{{block.dateCreated | date: 'short'}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
   <div class="modal-footer">
     <button class="btn-status-default" type="button" ng-click="cancel()">Close</button>
@@ -154,19 +154,19 @@
         <div class="col-lg-8 col-lg-offset-2">
       </fieldset>
       <fieldset class="form-group">
-          <label>Choose how much inventory to move: </label>
-          <input class="form-control" ng-model="quantity" type="number" placeholder="ex. 4000">
-          <small class="text-muted">{{getRemainingQuantity() + " " + block1.units}} remaining of {{block1.quantity + " " + block1.units}} in chosen stage.</small>
+        <label>Choose how much inventory to move: </label>
+        <input class="form-control" ng-model="quantity" type="number" placeholder="ex. 4000">
+        <small class="text-muted">{{getRemainingQuantity() + " " + block1.units}} remaining of {{block1.quantity + " " + block1.units}} in chosen stage.</small>
       </fieldset>
       <fieldset class="form-group">
-          <label>Moving chosen inventory batch to stage to supply chain: </label>
-          <select ng-model="selectedSupplyChain" ng-options="supplyChain as supplyChain.name for supplyChain in supplyChains" class="form-control"></select>
-          <small class="text-muted">Please select the target supply chain for your inventory.</small>
+        <label>Moving chosen inventory batch to stage to supply chain: </label>
+        <select ng-model="selectedSupplyChain" ng-options="supplyChain as supplyChain.name for supplyChain in supplyChains" class="form-control"></select>
+        <small class="text-muted">Please select the target supply chain for your inventory.</small>
       </fieldset>
       <fieldset class="form-group">
-          <label>Moving chosen inventory batch to stage: </label>
-          <select ng-model="toStage" ng-options="stage as stage.self.name for stage in selectedSupplyChain.stages" class="form-control"></select>
-          <small class="text-muted">Please select the target stage for your inventory.</small>
+        <label>Moving chosen inventory batch to stage: </label>
+        <select ng-model="toStage" ng-options="stage as stage.self.name for stage in selectedSupplyChain.stages" class="form-control"></select>
+        <small class="text-muted">Please select the target stage for your inventory.</small>
       </fieldset>
 
     </form>
@@ -202,61 +202,59 @@
     <h3 class="modal-title">Inventory Batch Details</h3>
   </div>
   <div class="modal-body">
-        <h4 class="text-center">Initial Catch Audit</h4>
-        <hr class="short">
-        <div class="tableWhite">
-          <table class="table tableWhite">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>Product Type</th>
-                <th>Quantity</th>
-                <th>Date Created</th>
-                <th>Select</th>
-              </tr>
-            </thead>
-            <tbody ng-repeat="block in blocks track by $index">
-              <tr>
-                <td>{{$index + 1}}</td>
-                <td>{{block.productType.name}}</td>
-                <td>{{block.quantity + " " + block.units}}</td>
-                <td>{{block.dateCreated | date:"yyyy-MM-dd hh:mm a"}}</td>
-                <td>
-                  <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          </div>
-          </div>
+    <h4 class="text-center">Initial Catch Audit</h4>
+    <hr class="short">
+    <div class="tableWhite">
+      <table class="table tableWhite">
+        <thead>
+          <tr>
+            <th>Select</th>
+            <th>Product Type</th>
+            <th>Quantity</th>
+            <th>Date Created</th>
+          </tr>
+        </thead>
+        <tbody ng-repeat="block in blocks track by $index">
+          <tr>
+            <td>
+              <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
+            </td>
+            <td>&nbsp;{{block.productType.name}}</td>
+            <td>&nbsp;{{block.quantity + " " + block.units}}</td>
+            <td>&nbsp;{{block.dateCreated | date:"yyyy-MM-dd hh:mm a"}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
-      <div class="modal-body">
-        <h4 class="text-center">Lot History</h4>
-        <hr class="short">
-        <div class="table-responsive">
-          <table class="table tableWhite">
-            <thead>
-              <tr>
-                <th>Operation</th>
-                <th>Date</th>
-                <th>Location</th>
-                <th>Quantity</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr ng-repeat="event in history.events track by $index">
-                <td>{{history.events[history.events.length-1-$index].operation}}</td>
-                <td>{{getDate([history.events.length-1-$index])}}</td>
-                <td>{{getStageName([history.events.length-1-$index])}}</td>
-                <td>{{quantities[$index] + " " + units[history.events.length-1-$index]}}</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
+  <div class="modal-body">
+    <h4 class="text-center">Lot History</h4>
+    <hr class="short">
+    <div class="table-responsive">
+      <table class="table tableWhite">
+        <thead>
+          <tr>
+            <th>Operation</th>
+            <th>Date</th>
+            <th>Location</th>
+            <th>Quantity</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="event in history.events track by $index">
+            <td>{{history.events[history.events.length-1-$index].operation}}</td>
+            <td>&nbsp;{{getDate([history.events.length-1-$index])}}</td>
+            <td>&nbsp;{{getStageName([history.events.length-1-$index])}}</td>
+            <td>&nbsp;{{quantities[$index] + " " + units[history.events.length-1-$index]}}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <div class="modal-footer">
-      <button class="btn-status-default" type="button" ng-click="cancel()">Close</button>
-    </div>
+  </div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn-status-default" type="button" ng-click="cancel()">Close</button>
+  </div>
   </div>
 </script>
