--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -91,10 +91,11 @@ canvas, vis-network-track {
   background-color: $secondary-background-color;
   width: 100%;
   height: 100%;
+  color: #000;
 }
 .vis-network .item {
-  background-color: #008CBA;
-  border-color: #008CBA;
+  background-color: #000;
+  border-color: #000;
   color: #ffffff;
   font-family: 'Helvetica Neue', Helvetica, Helvetica, Arial, sans-serif;
   font-kerning: auto;
@@ -105,8 +106,8 @@ canvas, vis-network-track {
   font-weight: normal;
 }
 .vis-network .item.green {
-  background-color: red;
-  border-color: red;
+  background-color: #000;
+  border-color: #000;
   color: #ffffff;
 }
 .vis-network .item.red {
