--- a/src/views/sign-up.html
+++ b/src/views/sign-up.html
@@ -24,11 +24,11 @@
                                 <h6>Password:</h6>
                                 <input ng-model="password" type="password" class="form-control" placeholder="Make it secure!">
                             </div>
-
                             <div class="form-group">
-                                <!--<h6>Fishery Name:</h6>-->
-                                <input ng-model="fisherName" type="hidden" class="form-control" placeholder="Appleseed Fishery">
+                                <h6>Email:</h6>
+                                <input ng-model="email" type="email" class="form-control" placeholder="fish@coastline.com">
                             </div>
+
 
                             <div class="form-group">
                                 <h6>Account Type:</h6>
