--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -41,7 +41,7 @@
             <thead>
               <tr>
                 <th>Select</th>
-                <!--<th>#</th>-->
+                <th>Job #</th>
                 <th>Product Type</th>
                 <th>Quantity</th>
                 <th>Inventory Input Date</th>
@@ -52,7 +52,7 @@
                 <td data-label="Select">
                   <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
                 </td>
-                <!--<td data-label="#">{{$index + 1}}</td>-->
+                <td data-label="#">{{block.jobNumber}}</td>
                 <td data-label="Product">{{block.productType.name}}</td>
                 <td data-label="Quantity">{{block.quantity + " " + block.units}}</td>
                 <td data-label="Add Date">{{block.dateCreated | date: 'short'}}</td>
@@ -130,14 +130,9 @@
       </fieldset>
       <--TODO-->
       <fieldset class="form-group">
-        <div class="col-lg-6">
-          <label>Process Type</label>
-          <input class="form-control" ng-model="processType" placeholder="ex. Gillnet">
-          <small class="text-muted">Enter the Catch Location</small>
-        </div>
-        <div class="col-lg-6">
+        <div class="col-lg-12">
           <label>Job Number</label>
-          <input class="form-control" ng-model="jobNum" type="number"placeholder="ex. 1738">
+          <input class="form-control" ng-model="jobNumber" type="number" placeholder="ex. 1738">
           <small class="text-muted">Enter in the fisherman/fishery</small>
         </div>
       </fieldset>
