Add order currency and tax rate

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -26,7 +26,7 @@
 
                <div class="form-group">
 
-                 <label>Don't have an account? <a ui-sref="sign-up">Sign Up</a> now!</label>
+                 <label>Don't have an account? <a ui-sref="sign-up">Sign Up</a> now! <a ui-sref="forgot-password">Forgot your password</a>?</label>
                </div>
 
                <!-- Change this to a button or input when using this as a form -->
