--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -64,8 +64,12 @@
       <h4><b>Credit Terms :</b> {{order.creditTerms}}</h4>
     </div>
     <div class="modal-footer">
-    <a class="btn-status-default" ng-href="{{ fileUrl }}" download="order:{{order.invoiceNumber}}.xlsx"><i class="fa fa-file-pdf-o"></i>  Export to PDF</a>
-    <a class="btn-status-default" ng-href="{{ fileUrl }}" download="order:{{order.invoiceNumber}}.xlsx"><i class="fa fa-file-excel-o"></i>  Export to Excel</a>
+    <!--<a class="btn-status-default" ng-href="{{ fileUrl }}" download="invoice.pdf"><i class="fa fa-file-pdf-o"></i>  Export to PDF</a>-->
+
+        <div ng-switch="pdfStatus">
+            <div ng-switch-default><a class="btn-status-default" href="javascript:void(0);" ng-click="getPDF()"><i class="fa fa-file-pdf-o"></i>  Export to PDF</a></div>
+            <div ng-switch-when="loading"><a class="btn-status-success" href="javascript:void(0);">Loading...</a></div>
+        </div>
     </div>
 
       <div class="modal-body">
@@ -165,6 +169,18 @@
             <label>Phone Number</label>
             <input class="form-control" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029"></input>
             <small class="text-muted">No spaces or dashes</small>
+          </div>
+        </fieldset>
+        <fieldset class="form-group">
+          <div class="col-lg-6">
+            <label>Order Currency</label>
+            <input class="form-control" type="text" maxlength="30" ng-model="currency" placeholder="ex. USD or CAD">
+            <small class="text-muted">Maximum 10 characters</small>
+          </div>
+          <div class="col-lg-6">
+            <label>Tax Rate (Format: 15% - NOT in decimal format)</label>
+            <input type="number" min="0" ng-model="taxRate" step="0.5" class="form-control" placeholder="ex. 13 for HST"></input>
+            <small class="text-muted">Please enter the tax rate as a percentage.</small>
           </div>
         </fieldset>
         <hr class="short">
