fieldanme+todo removed

--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -128,12 +128,11 @@
           <small class="text-muted">Enter the water depth in meters.</small>
         </div>
       </fieldset>
-      <--TODO-->
       <fieldset class="form-group">
         <div class="col-lg-12">
           <label>Job Number</label>
           <input class="form-control" ng-model="jobNumber" type="number" placeholder="ex. 1738">
-          <small class="text-muted">Enter in the fisherman/fishery</small>
+          <small class="text-muted">[Optional] Enter in the job number</small>
         </div>
       </fieldset>
     </form>
