--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -50,7 +50,7 @@
             <tbody ng-repeat="block in blocks track by $index">
               <tr>
                 <td data-label="Select">
-                  <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
+                  <input type="radio" ng-model="$parent.selectedBlock" ng-value="$parent.blocks[$index]">
                 </td>
                 <td data-label="Job #">&nbsp;{{block.jobNumber}}</td>
                 <td data-label="Product">{{block.productType.name}}</td>
