--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -526,7 +526,7 @@ table {
   border-radius: 2px;
 }
 table.tableWhite {
-  background-color: $secondary-background-color;
+  background-color: #f3f3f3;
   border-radius: 2px;
 
   th {
