dashboard sidebar redesign

--- a/src/views/dashboard.default.html
+++ b/src/views/dashboard.default.html
@@ -1,12 +1,12 @@
 <div class="col-sm-3 col-md-2 sidebar">
     <ul ng-controller="SideNavCtrl" class="nav nav-sidebar">
-        <li><h1>Navigation</h1><hr class="side-nav"></li>
+        <li><h1>Navigation</h1></li>
         <!--<li><a ng-class="{activeTab: state.includes('dashboard.default.overview')}" ui-sref=".overview">Overview</a></li>-->
-        <li><a ng-class="{activeTab: state.includes('dashboard.default.products')}" ui-sref=".products">Products</a></li>
-        <li><a ng-class="{activeTab: state.includes('dashboard.default.supply-chain')}" ui-sref=".supply-chain.menu">Supply Chain</a></li>
-        <li><a ng-class="{activeTab: state.includes('dashboard.default.inventory')}" ui-sref=".inventory.menu">Inventory</a></li>
-        <li><a ng-class="{activeTab: state.includes('dashboard.default.sales-management')}" ui-sref=".sales-management.track">Sales Channel</a></li>
-        <li><a ng-class="{activeTab: state.includes('dashboard.default.orders')}" ui-sref=".orders">Orders</a></li>
+        <li><a ng-class="{activeTab: state.includes('dashboard.default.products')}" ui-sref=".products"><i class="fa fa-ship"></i> Products</a></li>
+        <li><a ng-class="{activeTab: state.includes('dashboard.default.supply-chain')}" ui-sref=".supply-chain.menu"><i class="fa fa-link"></i> Supply Chain</a></li>
+        <li><a ng-class="{activeTab: state.includes('dashboard.default.inventory')}" ui-sref=".inventory.menu"><i class="fa fa-bar-chart"></i> Inventory</a></li>
+        <li><a ng-class="{activeTab: state.includes('dashboard.default.sales-management')}" ui-sref=".sales-management.track"><i class="fa fa-shopping-bag"></i> Sales Channel</a></li>
+        <li><a ng-class="{activeTab: state.includes('dashboard.default.orders')}" ui-sref=".orders"><i class="fa fa-file-text-o"></i> Orders</a></li>
 
     </ul>
 </div>
