--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -218,7 +218,7 @@ iframe:hover {
     left: 0;
     z-index: 1000;
     display: block;
-    padding: 20px;
+    // padding: 20px;
     overflow-x: hidden;
     overflow-y: auto;
     /* Scrollable contents if viewport is shorter than content. */
@@ -239,31 +239,40 @@ iframe:hover {
     a {
       color: $primary-font-color;
       font-size: 15px;
+      margin-right: -35px;
+      margin-left: -35px;
+      padding-left: 50px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      border-bottom: 0.12em solid #E8E8E8;
       &:hover {
-        background-color: $navbar-color;
+        background-color: #E8E8E8;
         @include border-radius(2px);
       }
       &:active {
-        background-color: $btn-default-color;
+        background-color: #78909C;
         color: white;
       }
     }
     a.activeTab {
-      background-color: $btn-default-color;
+      background-color: #78909C;
       @include border-radius(2px);
       color: #fff;
     }
     padding-right: 15px;
     padding-left: 15px;
-    margin: 10px 5px;
+    // margin: 10px 5px;
+  }
+  li:first-child {
+    // Use to get spacing b/t nav and first li
+    padding-top: 0px;
   }
 }
 .nav>li>a:focus,
-.nav>li>a:hover,
 .nav>li>a:active {
   text-decoration: none;
   @include border-radius(2px);
-  background-color: $btn-default-color;
+  background-color: #78909C;
   color: #fff;
 }
 /*
@@ -502,14 +511,11 @@ hr.short {
   opacity: 0.9;
 }
 hr.side-nav {
-  border-color: #454545;
-  width: 85%;
-  border-width: 0.15em;
+  width: 200%;
+  border-width: 0.12em;
+  color: #454545;
   margin-top: 0;
-  margin-bottom: 0;
-  margin-left: 15px;
-  margin-right: 15px;
-  opacity: 0.6;
+  margin-bottom: 8px;
 }
 div.modal-text {
   width: 80%;
