--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -128,13 +128,13 @@
           <small class="text-muted">Enter the water depth in meters.</small>
         </div>
       </fieldset>
-      <fieldset class="form-group">
+      <!--<fieldset class="form-group">
         <div class="col-lg-12">
           <label>Job Number</label>
           <input class="form-control" ng-model="jobNumber" type="number" placeholder="ex. 1738">
           <small class="text-muted">[Optional] Enter in the job number</small>
         </div>
-      </fieldset>
+      </fieldset>-->
     </form>
   </div>
   <div class="modal-footer">
@@ -212,9 +212,14 @@
         </div>
       </fieldset>
       <fieldset class="form-group">
-        <div class="col-lg-12">
+        <div class="col-lg-6">
           <label>Process Type: </label>
           <input class="form-control" ng-model="processType" type="text" placeholder="ex. Filleted, Five-pound bag">
+          <small class="text-muted">[Optional]: Please enter in the process type.</small>
+        </div>
+        <div class="col-lg-6">
+          <label>Process Type: </label>
+          <input class="form-control" ng-model="jobNumber" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 4000"></input>
           <small class="text-muted">[Optional]: Please enter in the process type.</small>
         </div>
       </fieldset>
