block move labels minor typo fix

--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -218,9 +218,9 @@
           <small class="text-muted">[Optional]: Please enter in the process type.</small>
         </div>
         <div class="col-lg-6">
-          <label>Process Type: </label>
+          <label>Job Number: </label>
           <input class="form-control" ng-model="jobNumber" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 4000"></input>
-          <small class="text-muted">[Optional]: Please enter in the process type.</small>
+          <small class="text-muted">[Optional]: Please enter in the job number.</small>
         </div>
       </fieldset>
     </form>
