--- a/src/views/fishery-setup.html
+++ b/src/views/fishery-setup.html
@@ -13,7 +13,7 @@
                </div>
 
                <!-- Change this to a button or input when using this as a form -->
-               <center><button type="submit" class="btn btn-default">Submit</button></center>
+               <center><button type="submit" class="btn-status-success">Submit</button></center>
              </fieldset>
            </form>
          </div>
