--- a/src/views/forgot-password.html
+++ b/src/views/forgot-password.html
@@ -9,11 +9,11 @@
            <form role="form" ng-controller="loginCtrl" ng-submit="sendResetLink()">
              <fieldset>
                <div class="form-group">
-                 <input type="name" class="form-control" id="name" ng-model="username" placeholder="johnappleseed" autofocus>
+                 <input type="name" class="form-control" id="name" ng-model="username" placeholder="coastalfishery" autofocus>
                </div>
 
                <!-- Change this to a button or input when using this as a form -->
-               <center><button type="submit" class="btn btn-default">Send Reset Link</button></center>
+               <center><button type="submit" class="btn-status-default">Send Reset Link</button></center>
              </fieldset>
            </form>
          </div>
