--- a/src/views/login.html
+++ b/src/views/login.html
@@ -18,19 +18,19 @@
            <form role="form" ng-controller="loginCtrl" ng-submit="login()">
              <fieldset>
                <div class="form-group">
-                 <input type="username" class="form-control" id="username" ng-model="username" placeholder="Username" autofocus>
+                 <input type="username" class="form-control" id="username" ng-model="username" placeholder="Username or email" autofocus>
                </div>
                <div class="form-group">
                  <input type="password" class="form-control" id="pwd" ng-model="password" placeholder="Password">
+                 <center><small><a ui-sref="forgot-password">Forgot your password?</a></small></center>
                </div>
 
                <div class="form-group">
-
-                 <label>Don't have an account? <a ui-sref="sign-up">Sign Up</a> now! <a ui-sref="forgot-password">Forgot your password</a>?</label>
+                 <center><label>Don't have an account? <a ui-sref="sign-up">Sign Up</a> today!</label></center>
                </div>
 
                <!-- Change this to a button or input when using this as a form -->
-               <center><button type="submit" class="btn btn-default">Submit</button></center>
+               <center><button type="submit" class="btn-status-success">Login</button></center>
                <!-- <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a> -->
              </fieldset>
            </form>
