--- a/src/views/sign-up.html
+++ b/src/views/sign-up.html
@@ -7,46 +7,51 @@
 </div>
  -->
 <div class="container">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="login-panel panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Sign Up</h3>
-                </div>
-                <div class="panel-body">
-                    <form role="form" ng-controller="loginCtrl" ng-submit="signUp()">
-                        <fieldset>
-                            <div class="form-group">
-                                <h6>Username:</h6>
-                                <input ng-model="username" type="username" class="form-control" placeholder="johnappleseed">
-                            </div>
-                            <div class="form-group">
-                                <h6>Password:</h6>
-                                <input ng-model="password" type="password" class="form-control" placeholder="Make it secure!">
-                            </div>
-                            <div class="form-group">
-                                <h6>Email:</h6>
-                                <input ng-model="email" type="email" class="form-control" placeholder="fish@coastline.com">
-                            </div>
-
-
-                            <div class="form-group">
-                                <h6>Account Type:</h6>
-
-                                <select ng-model="accountType" ng-options="type as type for type in ['admin']" class="form-control">
-                                </select>
-                            </div>
-                            <!-- Change this to a button or input when using this as a form -->
-                            <center>
-                                <button type="submit" class="btn btn-default">Submit</button>
-                            </center>
-                            <!-- <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a> -->
-                        </fieldset>
-                    </form>
-                </div>
-            </div>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <div class="login-panel panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Sign Up</h3>
         </div>
+        <div class="panel-body">
+          <form role="form" ng-controller="loginCtrl" ng-submit="signUp()">
+            <fieldset>
+              <div class="row">
+              <div class="form-group">
+                <div class="col-lg-6">
+                  <h6>Username:</h6>
+                  <input ng-model="username" type="username" class="form-control" placeholder="coastalfishery">
+                </div>
+                <div class="col-lg-6">
+                  <h6>Email:</h6>
+                  <input ng-model="email" type="email" class="form-control" placeholder="fish@coastline.com">
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="form-group">
+                <div class="col-lg-6">
+                  <h6>Password:</h6>
+                  <input ng-model="password" type="password" class="form-control" placeholder="Make it secure!">
+                </div>
+                <div class="col-lg-6">
+                  <h6>Account Type:</h6>
+                  <select ng-model="accountType" ng-options="type as type for type in ['admin']" class="form-control"></select>
+                </div>
+              </div>
+            </div>
+            </fieldset>
+              <!-- Change this to a button or input when using this as a form -->
+              <center>
+                <br>
+                <button type="submit" class="btn-status-success">Submit</button>
+              </center>
+              <!-- <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a> -->
+          </form>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
 <!-- <div class="container-fluid wrap2">
    <div class="container">
