--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -21,6 +21,7 @@
           <li class="hide"><a ui-sref=".default.orders">Orders</a></li>
           <li><a ui-sref=".default.products">Home</a></li>
           <li><a ui-sref=".help">Help</a></li>
+          <li><a ui-sref=".settings">Settings</a></li>
           <li><a ng-click="logout()" href="#">Logout</a></li>
         </ul>
       </div>
