--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -255,63 +255,8 @@
 </script>
 
 <!-- FILTER ORDERS MODAL-->
-<script type="text/ng-template" id="addFilterModal.html">
-  <div class="modal-header">
-    <h3 class="modal-title">Filter Order Criteria</h3>
-  </div>
-  <div class="modal-body">
-    <form>
-      <fieldset class="form-group">
-        <div class="col-lg-6">
-          <label>Customer Name</label>
-          <input class="form-control" type="text" maxlength="30" ng-model="customerName" placeholder="ex. John Doe">
-          <small class="text-muted">[Optional] Maximum 30 characters</small>
-        </div>
-        <div class="col-lg-6">
-          <label>Invoice Number</label>
-          <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
-          <small class="text-muted">[Optional] Order Invoice </small>
-        </div>
-      </fieldset>
-      <fieldset class="form-group">
-        <div class="col-lg-6">
-          <label>Payment Method</label>
-          <select ng-model="paymentMethod" class="form-control">
-            <option value="Cash">Cash</option>
-            <option value="Cheque">Cheque</option>
-            <option value="Credit">Credit</option>
-            <option value="Debit">Debit</option>
-          </select>
-          <small class="text-muted">Choose from the dropdown list</small>
-        </div>
-        <div class="col-lg-6">
-          <label>Status</label>
-          <select ng-model="status" class="form-control">
-            <option value="pending">Pending</option>
-            <option value="delivered">Delivered</option>
-            <option value="paid">Paid</option>
-            <option value="cancelled">Cancelled</option>
-            <option value="refunded">Refunded</option>
-          </select>
-          <small class="text-muted">Choose from the dropdown list</small>
-        </div>
-      </fieldset>
-      <fieldset class="form-group">
-        <div class="col-lg-6">
-        </div>
-        <div class="col-lg-6">
-          <label>Date</label>
-          <input class="form-control" type="date" ng-model="date" placeholder="ex. 12:44 PM, 2016-01-14">
-          <small class="text-muted">Press the triangle for the date widget</small>
-        </div>
-      </fieldset>
-
-    </form>
-  </div>
-  <div class="modal-footer">
-    <button class="btn-status-success" type="button" ng-click="ok()">Filter</button>
-    <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
-  </div>
+<script type="text/ng-template" id="views/modals/order-filter.html">
+    <div ng-include="'/views/modals/order-filter.html'"> </div>
 </script>
 
 <!-- DELETE ORDER MODAL-->
